--- a/style.css
+++ b/style.css
@@ -118,9 +118,11 @@ img{
 	transform: skewY(-2.5deg);
 	-moz-transform: skewY(-2.5deg);
 }
-.cli{
-	margin-top: 100px;
+/* stats section */
+.stats{
+	padding-top: 100px;
 }
+/* cli section */
 .cli .grid{
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(2, 1fr);
@@ -143,6 +145,9 @@ img{
 	justify-content: center;
 	align-items: center;
 	height: 100%;
+}
+.grid-3{
+	grid-template-columns: repeat(3, 1fr);
 }
 .card{
 	background-color: #fff;
@@ -176,5 +181,8 @@ img{
 	background-color: var(--primary-color);
 }
 my-1{
-	margin: ;
+	margin: 1rem 0;
+}
+my-4{
+	margin: 3rem 0;
 }
