--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Lato:ital,wght@0,300;0,400;1,300&family=Montserrat:ital,wght@1,400;1,900&family=Poppins:wght@400;700&display=swap');
 
 :root {
-	--primary-color: #6a6b6c;
+	--primary-color: #4c7c94;
+	--second-color: #8ab5c0;
 }
 *{
    padding: 0;
@@ -131,6 +132,14 @@ img{
 	grid-column: 1 / span 2;
 	grid-row: 1 / span 2;
 }
+/* Cloud */
+.cloud .grid{
+	grid-template-columns: 4fr 3fr;
+	background-color: (--second-color);
+}
+.cloud .container img{
+	width: 300px;
+}
 /* utilities */
 .container{
 	max-width: 1100px;
@@ -149,6 +158,7 @@ img{
 .grid-3{
 	grid-template-columns: repeat(3, 1fr);
 }
+
 .card{
 	background-color: #fff;
 	color: #333;
@@ -180,9 +190,70 @@ img{
 .bg-primary{
 	background-color: var(--primary-color);
 }
-my-1{
+section .cloud .container{
+	background-color: var(--second-color);
+}
+/*margins classes */
+.my-1{
 	margin: 1rem 0;
 }
-my-4{
+.my-2{
+	margin: 1.5rem 0;
+}
+.my-3{
+	margin: 2rem 0;
+}
+.my-4{
 	margin: 3rem 0;
 }
+.my-5{
+	margin: 4rem 0;
+}
+.m-1{
+	margin: 1rem;
+}
+.m-2{
+	margin: 1.5rem;
+}
+.m-3{
+	margin: 2rem;
+}
+.m-4{
+	margin: 3rem;
+}
+.m-5{
+	margin: 4rem;
+}
+
+/*paddings classes */
+.py-1{
+	padding: 1rem 0;
+}
+.py-2{
+	padding: 1.5rem 0;
+}
+.py-3{
+	padding: 2rem 0;
+}
+.py-4{
+	padding: 3rem 0;
+}
+.py-5{
+	padding: 4rem 0;
+}
+.p-1{
+}
+	padding: 1rem;
+.p-2{
+
+	padding: 1.5rem;
+}
+.p-3{
+	padding: 2rem;
+}
+.p-4{
+	padding: 3rem;
+}
+.p-5{
+	padding: 4rem;
+} 
