--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 :root {
 	--primary-color: #4c7c94;
+	--dark-color: #002240;
 	--second-color: #8ab5c0;
 }
 *{
@@ -121,7 +122,7 @@ img{
 }
 /* stats section */
 .stats{
-	padding-top: 100px;
+	padding-top: 150px;
 }
 /* cli section */
 .cli .grid{
@@ -135,125 +136,37 @@ img{
 /* Cloud */
 .cloud .grid{
 	grid-template-columns: 4fr 3fr;
-	background-color: (--second-color);
+	
 }
 .cloud .container img{
-	width: 300px;
+	width: 350px;
+	padding-left: 100px;
 }
-/* utilities */
-.container{
-	max-width: 1100px;
-	margin: 0 auto;
-	overflow: auto;
-	padding: 0 40px;
+.cloud .grid .bg-primary{
+	border-radius-top-left: 50px;
 }
-.grid{
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	gap: 20px;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
+/* languages*/
+.languages .flex{
+	flex-wrap: wrap;
 }
-.grid-3{
-	grid-template-columns: repeat(3, 1fr);
+.languages .card{
+	margin: 18px 10px 40px;
+	transition: transform 0.2s ease-in;
 }
-
-.card{
-	background-color: #fff;
-	color: #333;
-	border-radius: 10px;
-	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-	padding: 20px;
-	margin: 10px;
+.languages h4{
+	font-size: 20px;
+	margin-bottom: 10px;
 }
-.btn{
-	display: inline-block;
-	background: var(--primary-color);
-	color: #fff;
-	padding: 10px 30px;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-
+.languages .card:hover{
+	transform: translateY(-15px);
 }
-.btn-outline{
-	background-color: transparent;
-	border: 1px solid #fff;
+/* footer */
+.footer .social-links a{
+	margin: 0 10px;
 }
-.btn:hover{
-	transform: scale(0.98);
+.footer ul li a:hover{
+	border-bottom: 1px solid #fff;
 }
-.text-center{
-	text-align: center;
+.footer nav{
+	padding: 0 100px;
 }
-.bg-primary{
-	background-color: var(--primary-color);
-}
-section .cloud .container{
-	background-color: var(--second-color);
-}
-/*margins classes */
-.my-1{
-	margin: 1rem 0;
-}
-.my-2{
-	margin: 1.5rem 0;
-}
-.my-3{
-	margin: 2rem 0;
-}
-.my-4{
-	margin: 3rem 0;
-}
-.my-5{
-	margin: 4rem 0;
-}
-.m-1{
-	margin: 1rem;
-}
-.m-2{
-	margin: 1.5rem;
-}
-.m-3{
-	margin: 2rem;
-}
-.m-4{
-	margin: 3rem;
-}
-.m-5{
-	margin: 4rem;
-}
-
-/*paddings classes */
-.py-1{
-	padding: 1rem 0;
-}
-.py-2{
-	padding: 1.5rem 0;
-}
-.py-3{
-	padding: 2rem 0;
-}
-.py-4{
-	padding: 3rem 0;
-}
-.py-5{
-	padding: 4rem 0;
-}
-.p-1{
-}
-	padding: 1rem;
-.p-2{
-
-	padding: 1.5rem;
-}
-.p-3{
-	padding: 2rem;
-}
-.p-4{
-	padding: 3rem;
-}
-.p-5{
-	padding: 4rem;
-} 
