--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
 	--primary-color: #4c7c94;
 	--dark-color: #002240;
-	--second-color: #8ab5c0;
+	--second-color: #e9edee;
 }
 *{
    padding: 0;
@@ -161,6 +161,28 @@ img{
 	transform: translateY(-15px);
 }
 
+/* features */
+.features-head img,
+.docs-head img{
+	width: 200px;
+	justify-self: flex-end ;
+}
+.features-sub-head img{
+	width: 300px;
+	justify-self: flex-end;
+}
+.features-main .card > i{
+	margin-right: 20px;
+}
+.features-main .grid{
+	padding: 30px;
+}
+.features-main .grid > *:first-child{
+	grid-column: 1/span 3;
+}
+.features-main .grid > *:nth-child(2){
+	grid-column: 1/span 2;
+}
 /* footer */
 .footer .social-links a{
 	margin: 0 10px;
