--- a/style.css
+++ b/style.css
@@ -202,6 +202,10 @@ img{
 	.stats .grid,
 	.cli .grid,
 	.cloud .grid,
+	.features-head .grid,
+	.features-sub-head .grid,
+	.features-main .grid,
+	.docs-head .grid,
 	.footer .grid
 	{ grid-template-columns: 1fr;
 		grid-template-rows: 1fr;
@@ -209,7 +213,8 @@ img{
 	.showcase {
 		height: auto;
 	}
-	.showcase-text{
+	.showcase-text
+	{
 		text-align: center;
 		margin-top: 40px;
 		padding: 20px 30px;
@@ -226,7 +231,20 @@ img{
 	margin: auto;
 	width: 80%;
 	}
-	
+	.features-text,
+	.docs-text{
+		text-align: center;
+		padding: 20px 30px;
+	}
+	.features-head img,
+	.features-sub-head img,
+	.docs-head img{
+		justify-self: center;
+	}
+	.features-main .grid > *:first-child,
+	.features-main .grid > *:nth-child(2){
+		grid-column: 1;
+}
 }
 
 /* Mobile */
@@ -255,4 +273,6 @@ img{
 	grid-column: 1 / span 1;
 	grid-row: 1 / span 1;
 }
+	
+
 }
