--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 	--primary-color: #4c7c94;
 	--dark-color: #002240;
 	--second-color: #e9edee;
+	--success-color: #5cb85c;
+	--error-color: #d9534f;
 }
 *{
    padding: 0;
@@ -32,6 +34,12 @@ p{
 }
 img{
 	width: 100%;
+}
+code,
+pre{
+	background-color: #000;
+	color: #fff;
+	padding: 10px;
 }
 
 /* navbar */
@@ -183,6 +191,27 @@ img{
 .features-main .grid > *:nth-child(2){
 	grid-column: 1/span 2;
 }
+/* Docs */
+.docs-main h3{
+	margin: 20px 0;
+}
+.docs-main .grid{
+	grid-template-columns: 1fr 2fr;
+	align-items: flex-start;
+}
+.docs-main .card{
+	margin-bottom: 20px;
+}
+.docs-main nav li{
+	font-size: 17px;
+	padding-bottom: 5px;
+	margin-bottom: 5px;
+	border-bottom: 1px #ccc solid;
+}
+.docs-main a:hover{
+	font-weight: bold;
+}
+
 /* footer */
 .footer .social-links a{
 	margin: 0 10px;
@@ -206,6 +235,7 @@ img{
 	.features-sub-head .grid,
 	.features-main .grid,
 	.docs-head .grid,
+	.docs-main .grid,
 	.footer .grid
 	{ grid-template-columns: 1fr;
 		grid-template-rows: 1fr;
