--- a/utilities.css
+++ b/utilities.css
@@ -90,7 +90,7 @@
 	color: var(--primary-color);
 }
 .text-secondary{
-	color: var(--second-color);
+	color: #71797c;
 }
 /*margins classes */
 .my-1{
